--- a/Web.config
+++ b/Web.config
@@ -1,15 +1,18 @@
 ﻿<?xml version="1.0"?>
-
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
-
-    <system.web>
-      <compilation debug="true" targetFramework="4.6.1" />
-      <httpRuntime targetFramework="4.6.1" />
-    </system.web>
-
+  <system.web>
+    <compilation debug="true" targetFramework="4.6.1"/>
+    <httpRuntime targetFramework="4.6.1"/>
+  </system.web>
+  <system.serviceModel>
+    <bindings/>
+    <client/>
+  </system.serviceModel>
+  <appSettings>
+  <add key="PassReset.DepartmentOfEducation" value="http://localhost:51145/DepartmentOfEducation.asmx"/>
+  </appSettings>
 </configuration>
